--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,6 +1,6 @@
 languages:
   Ruby: false
-  JavaScript: false
+  JavaScript: true
   PHP: true
   Python: false
 exclude_paths:
@@ -9,9 +9,5 @@ exclude_paths:
   - "bootstrap/*"
   - "database/*"
   - "storage/*"
-  - "resources/assets/css/skin-*.css"
-  - "resources/assets/js/AdminLTE.js"
-  - "resources/assets/css/AdminLTE.css"
   - "resources/lang/en/*.php"
   - "*.blade.php"
-  - "*.js"
