--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,8 +1,6 @@
-languages:
-  Ruby: false
-  JavaScript: true
-  PHP: true
-  Python: false
+engines:
+  eslint:
+    enabled: false
 exclude_paths:
   - "vendor/*"
   - "config/*"
