Work on notification dialog

--- a/resources/assets/package.json
+++ b/resources/assets/package.json
@@ -80,7 +80,7 @@
     "webpack-validator": "^2.2.3"
   },
   "scripts": {
-    "start": "webpack-dashboard -- webpack-dev-server --display-error-details",
+    "start": "webpack-dashboard -- webpack-dev-server",
     "build": "webpack",
     "stats": "webpack --profile --json > stats.json",
     "lint": "eslint --ext .js --ext .jsx --cache js/ || true"
